# StethoX

./: .gitignore  README.md  build.gradle  build.gradle.kts  copyright  gradle.properties  settings.gradle.kts  stethox-launcher.py
.github/workflows/: ci.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/schabi/stethox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  art.cpp  art.h  art.hpp  classloader.cpp  classloader.h  logging.h  reflection.cpp  reflection.hpp  stethox.cpp  utils.cpp  utils.h
app/src/main/cpp/elf_parser/: CMakeLists.txt  elf_parser.cc
app/src/main/cpp/elf_parser/include/: elf_parser.hpp
app/src/main/cpp/elf_parser/xz-embedded/: xz.h  xz_config.h  xz_crc64.c
app/src/main/cpp/include/: logging.h
app/src/main/cpp/jvmti/: jvmti.h  stethox_jvmti.cpp
app/src/main/cpp/maps_scan/: CMakeLists.txt  maps_scan.cpp
app/src/main/cpp/maps_scan/include/: maps_scan.hpp
app/src/main/java/org/schabi/stethox/: StethoxAppInterceptor.java
app/src/main/res/values/: strings.xml
debugstub/: build.gradle.kts
docs/: README.md  hook.md  launch.md  memory.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden-api/: build.gradle.kts
hidden-api/src/main/java/android/app/: ActivityThread.java  IActivityManager.java
hidden-api/src/main/java/android/os/: ServiceManager.java  SystemProperties.java
(+38 files in other folders)
